--- a/BlockChain/Simple/Simple.csproj
+++ b/BlockChain/Simple/Simple.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DwrZip" Version="0.0.2" />
+  </ItemGroup>
+
 </Project>
