--- a/BlockChain/Simple/Simple.csproj
+++ b/BlockChain/Simple/Simple.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DwrZip" Version="0.0.2" />
+    <PackageReference Include="System.IO.Compression" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
